--- a/apps/auth/tsconfig.json
+++ b/apps/auth/tsconfig.json
@@ -14,6 +14,9 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@repo/*": ["../../packages/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
