--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -25,8 +25,14 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@ts-rest/nest": "3.53.0-rc.1",
+    "@t3-oss/env-core": "^0.13.10",
+    "@thallesp/nestjs-better-auth": "^2.4.0",
+    "better-auth": "^1.4.18",
+    "jose": "^6.1.3",
+    "pg": "^8.18.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -38,6 +44,7 @@
     "@swc/core": "^1.15.11",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
+    "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^9.18.0",
