--- a/apps/auth/tsconfig.json
+++ b/apps/auth/tsconfig.json
@@ -15,6 +15,7 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
+      "@/*": ["./src/*"],
       "@repo/*": ["../../packages/*"]
     },
     "incremental": true,
