--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,12 +11,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@base-ui/react": "^1.2.0",
+    "@fontsource-variable/jetbrains-mono": "^5.2.8",
+    "@tabler/icons-react": "^3.36.1",
+    "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-form": "^1.28.3",
     "@tanstack/react-router": "^1.159.5",
+    "better-auth": "^1.4.18",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "jotai": "^2.17.1",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "shadcn": "^3.8.4",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "@tanstack/router-devtools": "^1.159.5",
     "@tanstack/router-plugin": "^1.159.5",
     "@types/node": "^24.10.1",
