--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@base-ui/react": "^1.2.0",
     "@fontsource-variable/jetbrains-mono": "^5.2.8",
+    "@repo/auth-contracts": "workspace:*",
     "@tabler/icons-react": "^3.36.1",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-form": "^1.28.3",
     "@tanstack/react-router": "^1.159.5",
+    "@ts-rest/core": "3.53.0-rc.1",
     "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
