fix(auth): narrow types in JWT payload to satisfy lint
Narrow the incoming user shape in the JWT  callback to avoid  and unused variable lint errors. Also include only the minimal staged changes related to auth and workspace config.

No tests updated.

--- a/nx.json
+++ b/nx.json
@@ -14,13 +14,20 @@
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
     },
+    "serve": {
+      "dependsOn": ["^build"]
+    },
     "test": {
       "cache": true,
       "inputs": ["default", "^production", "{workspaceRoot}/jest.preset.js"]
     },
     "lint": {
       "cache": true,
-      "inputs": ["default", "{workspaceRoot}/.eslintrc.json", "{workspaceRoot}/.eslintignore"]
+      "inputs": [
+        "default",
+        "{workspaceRoot}/.eslintrc.json",
+        "{workspaceRoot}/.eslintignore"
+      ]
     }
   },
   "namedInputs": {
