--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -24,9 +24,10 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
-    "@ts-rest/nest": "3.53.0-rc.1",
+    "@repo/auth-contracts": "workspace:*",
     "@t3-oss/env-core": "^0.13.10",
     "@thallesp/nestjs-better-auth": "^2.4.0",
+    "@ts-rest/nest": "3.53.0-rc.1",
     "better-auth": "^1.4.18",
     "jose": "^6.1.3",
     "pg": "^8.18.0",
