--- a/packages/auth-contracts/package.json
+++ b/packages/auth-contracts/package.json
@@ -12,7 +12,7 @@
     }
   },
   "scripts": {
-    "build": "tsc",
+    "build": "rm -f tsconfig.tsbuildinfo && tsc",
     "dev": "tsc --watch",
     "typecheck": "tsc --noEmit",
     "lint": "echo 'No lint configured for auth-contracts' && exit 0",
