--- a/packages/auth-contracts/project.json
+++ b/packages/auth-contracts/project.json
@@ -9,7 +9,7 @@
       "executor": "nx:run-commands",
       "outputs": ["{projectRoot}/dist"],
       "options": {
-        "command": "tsc",
+        "command": "rm -f tsconfig.tsbuildinfo && tsc",
         "cwd": "packages/auth-contracts"
       }
     },
